--- a/Scripts/dramarama/static/css/base.css
+++ b/Scripts/dramarama/static/css/base.css
@@ -17,9 +17,11 @@
     font-weight: normal;
     font-style: normal;
 }
+*{ box-sizing: border-box; margin: 0px; }
 body{
     background-color: rgb(171, 162, 255);
     text-align: center;
+    align-content: center;
     width: 100%; height: 100%;
     overflow-x: hidden;
 }
