--- a/Scripts/dramarama/templates/dramarama/form.html
+++ b/Scripts/dramarama/templates/dramarama/form.html
@@ -1,188 +1,257 @@
 {% load static %}
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>DRAMA라마</title>
-	<link rel="icon" href="{% static 'images/favicon.ico' %}" type="image/x-icon"/>
-	<link rel="stylesheet" href="{% static 'css/base.css' %}" type="text/css"/>
-	<style>
-		@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300&display=swap');
-		h3{ color: #aba2ff; }
-	</style>
+    <title>DramaRama</title>
 	<script src="https://code.jquery.com/jquery-3.5.1.min.js"/>
-	<script src="{% static 'js/form.js' %}" type="text/javascript"/>
+	<script>
+		window.history.forward();
+		function noBack(){window.history.forward();}
+		$('div.checkbox-group.required :checkbox:checked').length > 0
+		$('div.perfer-group.required :checkbox:checked').length > 0
+	</script>
+	<link rel="icon" href="{% static 'images/favicon.ico' %}" type="image/x-icon"/>
+<!--	<link rel="stylesheet" href="{% static 'css/base.css' %}" type="text/css"/>-->
+	<!--<style>
+		.item{
+			background-color: aliceblue;
+			border-radius: 50px;
+			padding: 20px;
+			width: 50%;
+			max-width: 600px;
+			min-width: 300px;
+		}
+		.section-name{
+			font-family: 'Cafe24Ssurround';
+			color: #8469d0; font-size: 24px;
+			margin: 15px;
+		}
+		.ins{
+			font-family: 'Noto Sans KR';
+			color: #8469d0;
+			font-size: 14px;
+			margin-bottom: 15px;
+		}
+		.radios{
+			font-family: 'Noto Sans KR';
+			color: #404040; font-size: 16px;
+		}
+	</style>-->
+
 </head>
 <body onload="noBack();" onpageshow="if(event.persisted) noBack();" onunload="">
-	<form name = "testForm" action="To.you--From.Rama💜" method="post" onsubmit="return formCheck()">
-			<h3>* 표시되어있는 것은 필수로 체크해주세요.</h3>
+	<form name="testForm" action="To.you--From.Rama💜" method="post">
+		* 표시되어있는 것은 필수로 체크해주세요.
 		<div class="item">
-			<h3>나이</h3>
-			<input type="number" name="age" min="1" max="200">
+			<span class="section-name">나이</span>
+			<span class="radios"><input type="number" name="age" min="1" max="200"></span>
 		</div>
 		<div class="item">
-			<h3>성별</h3>
-			<input type="radio" name="gender" value="여자">여자
-			<input type="radio" name="gender" value="남자">남자
+			<span class="section-name">성별</span>
+			<span class="radios">
+				<input type="radio" name="gender" value="여자">여자
+				<input type="radio" name="gender" value="남자">남자
+			</span>
 		</div>
 		<div class="item">
-			<h3>* 성격</h3>
-			<h5>응답이 어렵다면 계속해서 읽어주십시오. 퇴근시간 지하철역에서 날 지나쳐 뛰어간 사람이 카드를 떨어트렸다.<br>
+			<span class="section-name">* 성격</span>
+			<div class="ins">
+				응답이 어렵다면 계속해서 읽어주십시오. 퇴근시간 지하철역에서 날 지나쳐 뛰어간 사람이 카드를 떨어트렸다.<br>
 			쫓아가 그 사람에게 건네줄 것인가(외향), 분실물 센터에 맡길 것인가(내향)?
-			</h5>
-			<input type="radio" name="personality" value="외향형" required = "required">외향형
-			<input type="radio" name="personality" value="내향형" required = "required">내향형
+			</div>
+			<span class="radios">
+				<input type="radio" name="personality" value="외향형" required = "required">외향형
+				<input type="radio" name="personality" value="내향형" required = "required">내향형
+			</span>
 		</div>
 		<div class="item">
-			<h3>* 활동적인 편</h3>
-			<h5>응답이 어렵다면 계속해서 읽어주십시오. 체육시간이 교실에서의 자율학습시간보다 좋다.</h5>
-			<input type="radio" name="activity" value="예" required = "required">예
-			<input type="radio" name="activity" value="아니오" required = "required">아니오
+			<span class="section-name">* 활동적인 편</span>
+			<div class="ins">
+				응답이 어렵다면 계속해서 읽어주십시오. 체육시간이 교실에서의 자율학습시간보다 좋다.
+			</div>
+			<span class="radios">
+				<input type="radio" name="activity" value="예" required = "required">예
+				<input type="radio" name="activity" value="아니오" required = "required">아니오
+			</span>
 		</div>
 		<div class="item">
-			<h3>* 직업</h3>
-			<h5>자신에게 가장 가깝다고 생각되는 항목을 선택하여 주십시오.</h5>
-			<input type="radio" name="job" value="학생" required = "required">학생<br>
-			<input type="radio" name="job" value="사무직" required = "required">사무직<br>
-			<input type="radio" name="job" value="전문직" required = "required">전문직<br>
-			<input type="radio" name="job" value="교사" required = "required">교사<br>
-			<input type="radio" name="job" value="프리랜서" required = "required">프리랜서<br>
-			<input type="radio" name="job" value="전업주부" required = "required">전업주부<br>
-			<input type="radio" name="job" value="백수" required = "required">백수<br>
-			<input type="radio" name="job" value="군인" required = "required">군인<br>
-			<input type="radio" name="job" value="공무직" required = "required">공무직<br>
-			<input type="radio" name="job" value="개인사업자" required = "required">개인사업자<br>
-			<input type="radio" name="job" value="경영인" required = "required">경영인<br>
-			<input type="radio" name="job" value="자원봉사자" required = "required">자원봉사자<br>
-			<input type="radio" name="job" value="아르바이트 직원" required = "required">아르바이트 직원
+			<span class="section-name">* 직업</span>
+			<div class="ins">자신에게 가장 가깝다고 생각되는 항목을 선택하여 주십시오.</div>
+			<div class="radios">
+				<input type="radio" name="job" value="학생" required = "required">학생<br>
+				<input type="radio" name="job" value="사무직" required = "required">사무직<br>
+				<input type="radio" name="job" value="전문직" required = "required">전문직<br>
+				<input type="radio" name="job" value="교사" required = "required">교사<br>
+				<input type="radio" name="job" value="프리랜서" required = "required">프리랜서<br>
+				<input type="radio" name="job" value="전업주부" required = "required">전업주부<br>
+				<input type="radio" name="job" value="백수" required = "required">백수<br>
+				<input type="radio" name="job" value="군인" required = "required">군인<br>
+				<input type="radio" name="job" value="공무직" required = "required">공무직<br>
+				<input type="radio" name="job" value="개인사업자" required = "required">개인사업자<br>
+				<input type="radio" name="job" value="경영인" required = "required">경영인<br>
+				<input type="radio" name="job" value="자원봉사자" required = "required">자원봉사자<br>
+				<input type="radio" name="job" value="아르바이트 직원" required = "required">아르바이트 직원
+			</div>
 		</div>
 		<div class="checkbox-group required">
 			<div class="item">
-				<h3>* 관심사</h3>
-				<input type="checkbox" name="interested" value="요리">요리<br>
-				<input type="checkbox" name="interested" value="스포츠">스포츠<br>
-				<input type="checkbox" name="interested" value="게임">게임<br>
-				<input type="checkbox" name="interested" value="인간관계">인간관계<br>
-				<input type="checkbox" name="interested" value="학업과 자기계발">학업과 자기계발<br>
-				<input type="checkbox" name="interested" value="본업">본업<br>
-				<input type="checkbox" name="interested" value="연애와 사랑">연애와 사랑<br>
-				<input type="checkbox" name="interested" value="종교와 운">종교와 운<br>
-				<input type="checkbox" name="interested" value="가족">가족<br>
-				<input type="checkbox" name="interested" value="음악과 노래">음악과 노래<br>
-				<input type="checkbox" name="interested" value="악기연주">악기연주<br>
-				<input type="checkbox" name="interested" value="영상콘텐츠(영화나 드라마, 유튜브 등)">영상콘텐츠(영화나 드라마, 유튜브 등)<br>
-				<input type="checkbox" name="interested" value="정치">정치<br>
-				<input type="checkbox" name="interested" value="공예">공예<br>
-				<input type="checkbox" name="interested" value="SNS">SNS<br>
-				<input type="checkbox" name="interested" value="건강과 위생">건강과 위생<br>
-				<input type="checkbox" name="interested" value="역사">역사<br>
-				<input type="checkbox" name="interested" value="연애">연애<br>
-				<input type="checkbox" name="interested" value="패션">패션<br>
-				<input type="checkbox" name="interested" value="부동산">부동산<br>
-				<input type="checkbox" name="interested" value="주식">주식<br>
-				<input type="checkbox" name="interested" value="오락(만화나 애니메이션)">오락(만화나 애니메이션)
+				<span class="section-name">* 관심사</span>
+				<div class="radios">
+					<input type="checkbox" name="interested" value="요리">요리<br>
+					<input type="checkbox" name="interested" value="스포츠">스포츠<br>
+					<input type="checkbox" name="interested" value="게임">게임<br>
+					<input type="checkbox" name="interested" value="인간관계">인간관계<br>
+					<input type="checkbox" name="interested" value="학업과 자기계발">학업과 자기계발<br>
+					<input type="checkbox" name="interested" value="본업">본업<br>
+					<input type="checkbox" name="interested" value="연애와 사랑">연애와 사랑<br>
+					<input type="checkbox" name="interested" value="종교와 운">종교와 운<br>
+					<input type="checkbox" name="interested" value="가족">가족<br>
+					<input type="checkbox" name="interested" value="음악과 노래">음악과 노래<br>
+					<input type="checkbox" name="interested" value="악기연주">악기연주<br>
+					<input type="checkbox" name="interested" value="영상콘텐츠(영화나 드라마, 유튜브 등)">영상콘텐츠(영화나 드라마, 유튜브 등)<br>
+					<input type="checkbox" name="interested" value="정치">정치<br>
+					<input type="checkbox" name="interested" value="공예">공예<br>
+					<input type="checkbox" name="interested" value="SNS">SNS<br>
+					<input type="checkbox" name="interested" value="건강과 위생">건강과 위생<br>
+					<input type="checkbox" name="interested" value="역사">역사<br>
+					<input type="checkbox" name="interested" value="연애">연애<br>
+					<input type="checkbox" name="interested" value="패션">패션<br>
+					<input type="checkbox" name="interested" value="부동산">부동산<br>
+					<input type="checkbox" name="interested" value="주식">주식<br>
+					<input type="checkbox" name="interested" value="오락(만화나 애니메이션)">오락(만화나 애니메이션)
+				</div>
 			</div>
 		</div>
 		<div class="item">
-			<h3>* 재학 여부</h3>
-			<input type="radio" name="school" value="예" required = "required">예<br>
-			<input type="radio" name="school" value="아니오" required = "required">아니오
+			<span class="section-name">* 재학 여부</span>
+			<span class="radios">
+				<input type="radio" name="school" value="예" required = "required">예
+				<input type="radio" name="school" value="아니오" required = "required">아니오
+			</span>
 		</div>
 		<div class="item">
-			<h3>* 재직 여부</h3>
-			<input type="radio" name="work" value="예" required = "required">예<br>
-			<input type="radio" name="work" value="아니오" required = "required">아니오
+			<span class="section-name">* 재직 여부</span>
+			<span class="radios">
+				<input type="radio" name="work" value="예" required = "required">예
+				<input type="radio" name="work" value="아니오" required = "required">아니오
+			</span>
 		</div>
 		<div class="item">
-			<h3>* 거주지</h3>
-			<input type="radio" name="abode" value="국내 수도권" required = "required">국내 수도권<br>
-			<input type="radio" name="abode" value="국내 지방" required = "required">국내 지방<br>
-			<input type="radio" name="abode" value="해외" required = "required">해외
+			<span class="section-name">* 거주지</span>
+			<div class="radios">
+				<input type="radio" name="abode" value="국내 수도권" required = "required">국내 수도권
+				<input type="radio" name="abode" value="국내 지방" required = "required">국내 지방
+				<input type="radio" name="abode" value="해외" required = "required">해외
+			</div>
 		</div>
 		<div class="item">
-			<h3>* 형제자매 수</h3>
-			<input type="number" name="siblings" min="0" max="200">
+			<span class="section-name">* 형제자매 수</span>
+			<span class="radios"><input type="number" name="siblings" min="0" max="200"></span>
 		</div>
 		<div class="item">
-			<h3>* 가족 수</h3>
-			<input type="number" name="family" min="0" max="200">
+			<span class="section-name">* 가족 수</span>
+			<span class="radios"><input type="number" name="family" min="0" max="200"></span>
 		</div>
 		<div class="item">
-			<h3>* 자취여부</h3>
-			<input type="radio" name="livealone" value="예" required = "required">예<br>
-			<input type="radio" name="livealone" value="아니오" required = "required">아니오
+			<span class="section-name">* 자취여부</span>
+			<span class="radios">
+				<input type="radio" name="livealone" value="예" required = "required">예
+				<input type="radio" name="livealone" value="아니오" required = "required">아니오
+			</span>
 		</div>
 		<div class="item">
-			<h3>* 전공계열</h3>
-			<h5>또는 전공으로 삼고자 하거나 더욱 친숙하고 관심있는 분야</h5>
-			<input type="radio" name="major" value="이과" required = "required">이과<br>
-			<input type="radio" name="major" value="문과" required = "required">문과
+			<span class="section-name">* 전공계열</span>
+			<div class="ins">또는 전공으로 삼고자 하거나 더욱 친숙하고 관심있는 분야</div>
+			<span class="radios">
+				<input type="radio" name="major" value="이과" required = "required">이과
+				<input type="radio" name="major" value="문과" required = "required">문과
+			</span>
 		</div>
 		<div class="item">
-			<h3>경제상황</h3>
-			<h5>주관적인 생각으로 응답해주세요.</h5>
-			<input type="radio" name="homeecomony" value="부족함">부족함<br>
-			<input type="radio" name="homeecomony" value="넉넉함">넉넉함<br>
-			<input type="radio" name="homeecomony" value="부유함">부유함
+			<span class="section-name">경제상황</span>
+			<div class="ins">주관적인 생각으로 응답해주세요.</div>
+			<span class="radios">
+				<input type="radio" name="homeecomony" value="부족함">부족함
+				<input type="radio" name="homeecomony" value="넉넉함">넉넉함
+				<input type="radio" name="homeecomony" value="부유함">부유함
+			</span>
 		</div>
 		<div class="item">
-			<h3>* 연애경험 유무</h3>
-			<input type="radio" name="havedate" value="예" required = "required">예<br>
-			<input type="radio" name="havedate" value="아니오" required = "required">아니오
+			<span class="section-name">* 연애경험 유무</span>
+			<span class="radios">
+				<input type="radio" name="havedate" value="예" required = "required">예
+				<input type="radio" name="havedate" value="아니오" required = "required">아니오
+			</span>
 		</div>
 		<div class="item">
-			<h3>신체적인 문제로 힘들었던 경험 유무</h3>
-			<h5>주관적인 판단으로 응답해 주세요.</h5>
-			<input type="radio" name="physicaltrouble" value="예">예<br>
-			<input type="radio" name="physicaltrouble" value="아니오">아니오
+			<span class="section-name">신체적인 문제로 힘들었던 경험 유무</span>
+			<div class="ins">주관적인 판단으로 응답해 주세요.</div>
+			<span class="radios">
+				<input type="radio" name="physicaltrouble" value="예">예
+				<input type="radio" name="physicaltrouble" value="아니오">아니오
+			</span>
 		</div>
 		<div class="item">
-			<h3>정신적인 문제로 힘들었던 경험 유무</h3>
-			<h5>주관적인 판단으로 응답해 주세요.</h5>
-			<input type="radio" name="mentaltrouble" value="예">예<br>
-			<input type="radio" name="mentaltrouble" value="아니오">아니오
+			<span class="section-name">정신적인 문제로 힘들었던 경험 유무</span>
+			<div class="ins">주관적인 판단으로 응답해 주세요.</div>
+			<span class="radios">
+				<input type="radio" name="mentaltrouble" value="예">예
+				<input type="radio" name="mentaltrouble" value="아니오">아니오
+			</span>
 		</div>
 
 		<h1>드라마 시청에 대한 질문</h1>
-		<h3>!유의사항!<br>모든 항목에서 '현재'를 중심으로 응답해주십시오.</h3>
+		<span class="section-name">!유의사항!<br>모든 항목에서 '현재'를 중심으로 응답해주십시오.</span>
 		<div class="item">
 			<div class="prefer-group required">
-				<h3>* 선호장르</h3>
-				<input type="checkbox" name="prefergenre" value="액션(하위 범죄)">액션(하위 범죄)<br>
-				<input type="checkbox" name="prefergenre" value="일상(하위 코미디)">일상(하위 코미디)<br>
-				<input type="checkbox" name="prefergenre" value="로맨스(하위 멜로)">로맨스(하위 멜로)<br>
-				<input type="checkbox" name="prefergenre" value="추리">추리<br>
-				<input type="checkbox" name="prefergenre" value="스릴러(하위 공포, 재난)">스릴러(하위 공포, 재난)<br>
-				<input type="checkbox" name="prefergenre" value="교육(하위 역사)">교육(하위 역사)<br>
-				<input type="checkbox" name="prefergenre" value="힐링(하위 다큐멘터리)">힐링(하위 다큐멘터리)
+				<span class="section-name">* 선호장르</span>
+				<div class="radios">
+					<input type="checkbox" name="prefergenre" value="액션(하위 범죄)">액션(하위 범죄)<br>
+					<input type="checkbox" name="prefergenre" value="일상(하위 코미디)">일상(하위 코미디)<br>
+					<input type="checkbox" name="prefergenre" value="로맨스(하위 멜로)">로맨스(하위 멜로)<br>
+					<input type="checkbox" name="prefergenre" value="추리">추리<br>
+					<input type="checkbox" name="prefergenre" value="스릴러(하위 공포, 재난)">스릴러(하위 공포, 재난)<br>
+					<input type="checkbox" name="prefergenre" value="교육(하위 역사)">교육(하위 역사)<br>
+					<input type="checkbox" name="prefergenre" value="힐링(하위 다큐멘터리)">힐링(하위 다큐멘터리)
+				</div>
 			</div>
 		</div>
 		<div class="item">
-			<h3>* 선호채널</h3>
-			<h5>지상파 채널 : KBS1, KBS2, MBC, SBS, EBS / 케이블 : 그 외 모든 채널</h5>
-			<input type="radio" name="preferchannel" value="지상파" required = "required">지상파<br>
-			<input type="radio" name="preferchannel" value="케이블" required = "required">케이블
+			<span class="section-name">* 선호채널</span>
+			<div class="ins">지상파 채널 : KBS1, KBS2, MBC, SBS, EBS / 케이블 : 그 외 모든 채널</div>
+			<span class="radios">
+				<input type="radio" name="preferchannel" value="지상파" required = "required">지상파
+				<input type="radio" name="preferchannel" value="케이블" required = "required">케이블
+			</span>
 		</div>
 		<div class="item">
-			<h3>* 주 시청 시간(휴일중)</h3>
-			<h5>낮과 밤 구분으로, 24시간이 자유로운 휴일에는 어느 시간 대 사이에 주로 시청하는지 응답. 또는 어느 시간대에 시청하고 싶은지 응답.</h5>
-			<input type="radio" name="watchingtime" value="6-18시" required = "required">6-18시<br>
-			<input type="radio" name="watchingtime" value="18-6시" required = "required">18-6시
+			<span class="section-name">* 주 시청 시간(휴일중)</span>
+			<div class="ins">
+				낮과 밤 구분으로, 24시간이 자유로운 휴일에는 어느 시간 대 사이에 주로 시청하는지 응답. 또는 어느 시간대에 시청하고 싶은지 응답.
+			</div>
+			<span class="radios">
+				<input type="radio" name="watchingtime" value="6-18시" required = "required">6-18시<br>
+				<input type="radio" name="watchingtime" value="18-6시" required = "required">18-6시
+			</span>
 		</div>
 		<div class="item">
-			<h3>* 드라마 주 시청 수단</h3>
-			<input type="radio" name="used" value="TV또는 빔 프로젝터" required = "required">TV또는 빔 프로젝터<br>
-			<input type="radio" name="used" value="컴퓨터(데스크탑)" required = "required">컴퓨터(데스크탑)<br>
-			<input type="radio" name="used" value="휴대용 기기(노트북, 휴대폰 등)" required = "required">휴대용 기기(노트북, 휴대폰 등)
+			<span class="section-name">* 드라마 주 시청 수단</span>
+			<div class="radios">
+				<input type="radio" name="used" value="TV또는 빔 프로젝터" required = "required">TV또는 빔 프로젝터<br>
+				<input type="radio" name="used" value="컴퓨터(데스크탑)" required = "required">컴퓨터(데스크탑)<br>
+				<input type="radio" name="used" value="휴대용 기기(노트북, 휴대폰 등)" required = "required">휴대용 기기(노트북, 휴대폰 등)
+			</div>
 		</div>
 		<div class="item">
-			<h3>* 드라마 주 시청 방법</h3>
-			<input type="radio" name="way" value="본방송" required = "required">본방송<br>
-			<input type="radio" name="way" value="재방송" required = "required">재방송<br>
-			<input type="radio" name="way" value="다시보기 다운로드(유료 또는 무료)" required = "required">다시보기 다운로드(유료 또는 무료)<br>
-			<input type="radio" name="way" value="다시보기, 연재작 (온라인 콘텐츠 플랫폼 ex.NETFLIX, 왓챠)" required = "required">다시보기, 연재작 (온라인 콘텐츠 플랫폼 ex.NETFLIX, 왓챠)
+			<div class="section-name">* 드라마 주 시청 방법</div>
+			<div class="radios">
+				<input type="radio" name="way" value="본방송" required = "required">본방송<br>
+				<input type="radio" name="way" value="재방송" required = "required">재방송<br>
+				<input type="radio" name="way" value="다시보기 다운로드(유료 또는 무료)" required = "required">다시보기 다운로드(유료 또는 무료)<br>
+				<input type="radio" name="way" value="다시보기, 연재작 (온라인 콘텐츠 플랫폼 ex.NETFLIX, 왓챠)" required = "required">다시보기, 연재작 (온라인 콘텐츠 플랫폼 ex.NETFLIX, 왓챠)
+			</div>
 		</div>
-
-		<button input type="submit" value="나에게 맞는 드라마는?">나에게 맞는 드라마는?</button>
+		<button input type="submit" value="나에게 맞는 드라마는?">라마의 추천결과 보러가기</button>
 	</form>
 </body>
 </html>
