Design cover page for index

--- a/Scripts/dramarama/static/css/base.css
+++ b/Scripts/dramarama/static/css/base.css
@@ -19,7 +19,7 @@
 }
 *{ box-sizing: border-box; margin: 0px; }
 body{
-    background-color: rgb(171, 162, 255);
+    background-color: #ABA2FF;
     text-align: center;
     align-content: center;
     width: 100%; height: 100%;
