--- a/Scripts/dramarama/templates/dramarama/index.html
+++ b/Scripts/dramarama/templates/dramarama/index.html
@@ -6,9 +6,10 @@
     <link rel="icon" href="{% static 'images/favicon.ico' %}" type="image/x-icon"/>
 <!--    <link rel="stylesheet" href="{% static 'css/base.css' %}" type="text/css"/>-->
 <!--    <link rel="stylesheet" href="{% static 'css/index.css' %}" type="text/css"/>-->
-    <style>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 
-	</style>
+
 </head>
 
 <body>
