--- a/Scripts/dramarama/static/css/base.css
+++ b/Scripts/dramarama/static/css/base.css
@@ -1,37 +1,122 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@500;700&display=swap');
-@font-face {
-    font-family: 'ELAND_Nice_M';
-    src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts-20-12@1.0/ELAND_Nice_M.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-}
+/*
+ * Globals
+ */
+
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@500;700;800&display=swap');
 @font-face {
     font-family: 'Cafe24Ssurround';
     src: local(※), url("../fonts/Cafe24Ssurround.woff") format('woff');
-    font-weight: normal;
-    font-style: normal;
 }
-@font-face {
-    font-family: 'Cafe24Ssurroundair';
-    src: local(※), url("../fonts/Cafe24Ssurroundair.woff") format('woff');
-    font-weight: normal;
-    font-style: normal;
+
+/* Custom default button */
+.btn-secondary{
+  color: white;
+  background: none;
 }
-*{ box-sizing: border-box; margin: 0px; }
-body{
-    background-color: #ABA2FF;
+.btn-secondary:hover,
+.btn-secondary:focus{
+  color: #333333;
+  text-shadow: none; /* Prevent inheritance from `body` */
+  background-color: white;
+}
+
+.btn-secondary:focus,
+.btn-secondary:active{
+  outline: none !important;
+  box-shadow: none !important;
+}
+
+
+.home-desc-title{
+  font-weight: 800;
+}
+
+.bg-app{
+  background: linear-gradient(to bottom, #a176ef 40%, #36ceff 140%) fixed;
+}
+
+/*.bd-placeholder-img {*/
+/*  font-size: 1.125rem;*/
+/*  text-anchor: middle;*/
+/*  -webkit-user-select: none;*/
+/*  -moz-user-select: none;*/
+/*  user-select: none;*/
+/*}*/
+
+
+/*
+ * Base structure
+ */
+
+body {
+  font-family: 'Noto Sans KR';
+}
+
+
+.cover-container {
+  max-width: 55em;
+}
+
+.out-container{
+  margin: 0em 7em;
+}
+
+.intro_container{
+
+}
+
+
+.img-app{
+  width: 90%;
+  filter: drop-shadow(0 .05rem .1rem rgba(0, 0, 0, .2));
+}
+
+/*
+ * Header
+ */
+
+.nav-masthead .nav-link {
+  padding: .25rem 0;
+  font-weight: 700;
+  color: rgba(255, 255, 255, 0.5);
+  background-color: transparent;
+  /*border-bottom: .15rem solid transparent;*/
+}
+
+.nav-masthead .nav-link:hover,
+.nav-masthead .nav-link:focus {
+  /*border-bottom-color: rgba(255, 255, 255, 0.25);*/
+}
+
+.nav-masthead .nav-link + .nav-link {
+  margin-left: 1rem;
+}
+
+.nav-masthead .active {
+  color: #fff;
+  border-bottom-color: #fff;
+}
+
+.title-app{
+  font-family: 'Cafe24Ssurround';
+}
+
+.section{
     text-align: center;
-    align-content: center;
-    width: 100%; height: 100%;
-    overflow-x: hidden;
 }
-button{
+.section-title{
     font-family: 'Cafe24Ssurround';
-    background: none;
-    font-size: 30px;
-    border: 0;
-    color: #8469d0;
+    text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
+
 }
-button:hover{
-    color: aliceblue;
+
+iframe{
+    width: 100%; height: 430px;
+    border: 1vw solid rgba(255, 255, 255, 0.5);
+    border-radius: 3vw;
+}
+
+footer{
+  color: rgba(255, 255, 255, .7);
+
 }
