--- a/Scripts/dramarama/static/css/cover.css
+++ b/Scripts/dramarama/static/css/cover.css
@@ -1,105 +1,40 @@
-/*
- * Globals
- */
-
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@500;700;800&display=swap');
-@font-face {
-    font-family: 'Cafe24Ssurround';
-    src: local(※), url("../fonts/Cafe24Ssurround.woff") format('woff');
-}
-
-/* Custom default button */
-.btn-secondary{
-  color: white;
-  background: none;
-}
-.btn-secondary:hover,
-.btn-secondary:focus{
-  color: #333333;
-  text-shadow: none; /* Prevent inheritance from `body` */
-  background-color: white;
-}
-
-.btn-secondary:focus,
-.btn-secondary:active{
-  outline: none !important;
-  box-shadow: none !important;
-}
-
-.home-desc-title{
-  font-weight: 800;
-}
-
-.bg-app{
-  background: linear-gradient(to bottom, #a176ef 40%, #36ceff 140%);
-}
-
-/*.bd-placeholder-img {*/
-/*  font-size: 1.125rem;*/
-/*  text-anchor: middle;*/
-/*  -webkit-user-select: none;*/
-/*  -moz-user-select: none;*/
-/*  user-select: none;*/
-/*}*/
-
-
-/*
- * Base structure
- */
-
-body {
-  font-family: 'Noto Sans KR';
+body{
   text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
 }
 
-
-
-.cover-container {
-  max-width: 55em;
+.img-app-m{
+  display: none;
+}
+.btn-margin-m{
+  margin-top: 2em;
+}
+.col{
+  margin-left: 0;margin-right: 0;
+  padding-left: 0;padding-right: 0;
 }
 
-/*.out-container{*/
-/*  margin: 0em 8em 0em 8em;*/
-/*}*/
-
-
-.img-app{
-  width: 90%;
-  filter: drop-shadow(0 .05rem .1rem rgba(0, 0, 0, .2));
+@media (max-width: 768px) {
+  .bd-placeholder-img-lg {
+    font-size: 3.5rem;
+  }
+  .img-col{
+    display: none;
+  }
+  .img-app-m{
+    display: inherit;
+  }
+  .btn-margin-m{
+    margin-top: 1em;
+  }
+  .lead-button{
+    text-align: center;
+  }
+  .out-container{
+    margin: 0;
+  }
 }
 
-/*
- * Header
- */
-
-.nav-masthead .nav-link {
-  padding: .25rem 0;
-  font-weight: 700;
-  color: rgba(255, 255, 255, .5);
-  background-color: transparent;
-  /*border-bottom: .15rem solid transparent;*/
-}
-
-.nav-masthead .nav-link:hover,
-.nav-masthead .nav-link:focus {
-  /*border-bottom-color: rgba(255, 255, 255, 0.25);*/
-}
-
-.nav-masthead .nav-link + .nav-link {
-  margin-left: 1rem;
-}
-
-.nav-masthead .active {
-  color: #fff;
-  border-bottom-color: #fff;
-}
-
-.title-app{
-  font-family: 'Cafe24Ssurround';
-}
-
-header{
-}
 footer{
   color: rgba(255, 255, 255, .7);
+  text-shadow: none;
 }
