--- a/Scripts/dramarama/templates/dramarama/answer.html
+++ b/Scripts/dramarama/templates/dramarama/answer.html
@@ -1,115 +1,86 @@
 {% load static %}
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>DRAMA라마</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
+    <meta name="generator" content="Hugo 0.79.0">
+    <title>DramaRama</title>
     <link rel="icon" href="{% static 'images/favicon.ico' %}" type="image/x-icon"/>
-    <!--<style>
-		@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap');
-        p{ color: #aba2ff;
-           font-size: 60px;
-           font-family: 'Noto Sans KR', sans-serif;
-         }
+    <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/cover/">
+    <!-- Bootstrap core JS -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
+    <!-- Bootstrap core CSS -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <!-- Custom styles for this template -->
+    <link href="{% static 'css/base.css' %}" rel="stylesheet">
+<!--	<link href="{% static 'css/answer.css' %}" rel="stylesheet">-->
+    <link rel="icon" href="{% static 'images/favicon.ico' %}" type="image/x-icon"/>
+    <style>
+        dt{
+            text-align: right;
+        }
+        dd{
+            text-align: left;
+        }
+    </style>
 
-        a{
-            color: #febfa9;
-            font-size: 20px;
-            font-family: 'Noto Sans KR', sans-serif;
-        }
-
-        pq{
-            color:  #868296;
-            font-size: 20px;
-            font-family: 'Noto Sans KR', sans-serif;
-        }
-        button{ background-color: #aba2ff;
-                width: 100px;
-                height: 50px;
-                border-radius: 5px;
-                border: 0;
-                outline: 0;
-                }
-        button:hover{
-            background-color: #aba2ff;
-                width: 110px;
-                height: 60px;
-                border-radius: 5px;
-                border: 0;
-                outline: 0;
-        }
-	</style>-->
 </head>
-<body>
+<body class="d-flex text-center h-100 bg-app"> <!--user-select-none-->
+    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+      <main class="px-3">
+          <button class="btn btn-lg btn-secondary fw-bold border-white mb-4" onclick="history.go(-1)">돌아가기</button>
+          <dl class="row text-white">
+              <dt class="col-sm-4">나이</dt>
+              <dd class="col-sm-8">{{answer.age}}</dd>
+              <dt class="col-sm-4">성별</dt>
+              <dd class="col-sm-8">{{answer.gender}}</dd>
+              <dt class="col-sm-4">성격</dt>
+              <dd class="col-sm-8">{{answer.personality}}</dd>
+              <dt class="col-sm-4">활동적인 편</dt>
+              <dd class="col-sm-8">{{answer.activity}}</dd>
+              <dt class="col-sm-4">직업</dt>
+              <dd class="col-sm-8">{{answer.job}}</dd>
+              <dt class="col-sm-4">관심사</dt>
+              <dd class="col-sm-8">{{answer.interested}}</dd>
+              <dt class="col-sm-4">재학 여부</dt>
+              <dd class="col-sm-8">{{answer.school}}</dd>
+              <dt class="col-sm-4">재직 여부</dt>
+              <dd class="col-sm-8">{{answer.work}}</dd>
+              <dt class="col-sm-4">거주지</dt>
+              <dd class="col-sm-8">{{answer.abode}}</dd>
+              <dt class="col-sm-4">형제자매 수</dt>
+              <dd class="col-sm-8">{{answer.siblings}}</dd>
+              <dt class="col-sm-4">가족 수</dt>
+              <dd class="col-sm-8">{{answer.family}}</dd>
+              <dt class="col-sm-4">자취여부</dt>
+              <dd class="col-sm-8">{{answer.livealone}}</dd>
+              <dt class="col-sm-4">전공계열</dt>
+              <dd class="col-sm-8">{{answer.major}}</dd>
+              <dt class="col-sm-4">경제상황</dt>
+              <dd class="col-sm-8">{{answer.homeecomony}}</dd>
+              <dt class="col-sm-4">연애경험 유무</dt>
+              <dd class="col-sm-8">{{answer.havedate}}</dd>
+              <dt class="col-sm-4">신체적인 문제로 힘들었던 경험 유무</dt>
+              <dd class="col-sm-8">{{answer.physicaltrouble}}</dd>
+              <dt class="col-sm-4">정신적인 문제로 힘들었던 경험 유무</dt>
+              <dd class="col-sm-8">{{answer.mentaltrouble}}</dd>
+              <dt class="col-sm-4">선호장르</dt>
+              <dd class="col-sm-8">{{answer.prefergenre}}</dd>
+              <dt class="col-sm-4">선호채널</dt>
+              <dd class="col-sm-8">{{answer.preferchannel}}</dd>
+              <dt class="col-sm-4">주 시청 시간(휴일중)</dt>
+              <dd class="col-sm-8">{{answer.watchingtime}}</dd>
+              <dt class="col-sm-4">드라마 주 시청 수단</dt>
+              <dd class="col-sm-8">{{answer.used}}</dd>
+              <dt class="col-sm-4">드라마 주 시청 방법</dt>
+              <dd class="col-sm-8">{{answer.way}}</dd>
+          </dl>
 
-    <button input type="submit" onclick="history.go(-1)">돌아가기</button>
-    <p>나의 응답</p>
-    <pq>1. 나이 : </pq>
-    <a>{{answer.age}}</a> <br><br>
 
-    <pq>2. 성별 : </pq>
-    <a>{{answer.gender}}</a> <br><br>
-
-    <pq>3. 성격 : </pq>
-    <a>{{answer.personality}}</a> <br><br>
-
-    <pq>4. 활동적인 편 : </pq>
-    <a>{{answer.activity}}</a> <br><br>
-
-    <pq>5. 직업 : </pq>
-    <a>{{answer.job}}</a> <br><br>
-
-    <pq>6. 관심사 : </pq>
-    <a>{{answer.interested}}</a> <br><br>
-
-    <pq>7. 재학 여부 : </pq>
-    <a>{{answer.school}}</a> <br><br>
-
-    <pq>8. 재직 여부 : </pq>
-    <a>{{answer.work}}</a> <br><br>
-
-    <pq>9. 거주지 : </pq>
-    <a>{{answer.abode}}</a> <br><br>
-
-    <pq>10. 형제자매 수 : </pq>
-    <a>{{answer.siblings}}</a> <br><br>
-
-    <pq>11. 가족 수 : </pq>
-    <a>{{answer.family}}</a> <br><br>
-
-    <pq>12. 자취여부 : </pq>
-    <a>{{answer.livealone}}</a> <br><br>
-
-    <pq>13. 전공계열 : </pq>
-    <a>{{answer.major}}</a> <br><br>
-
-    <pq>14. 경제상황 : </pq>
-    <a>{{answer.homeecomony}}</a> <br><br>
-
-    <pq>15. 연애경험 유무 : </pq>
-    <a>{{answer.havedate}}</a> <br><br>
-
-    <pq>16. 신체적인 문제로 힘들었던 경험 유무 : </pq>
-    <a>{{answer.physicaltrouble}}</a> <br><br>
-
-    <pq>17. 정신적인 문제로 힘들었던 경험 유무 : </pq>
-    <a>{{answer.mentaltrouble}}</a> <br><br>
-
-    <p>드라마 시청에 대한 대답</p>
-
-    <pq>1. 선호장르 : </pq>
-    <a>{{answer.prefergenre}}</a> <br><br>
-
-    <pq>2. 선호채널 : </pq>
-    <a>{{answer.preferchannel}}</a> <br><br>
-
-    <pq>3. 주 시청 시간(휴일중) : </pq>
-    <a>{{answer.watchingtime}}</a> <br><br>
-
-    <pq>4. 드라마 주 시청 수단 : </pq>
-    <a>{{answer.used}}</a> <br><br>
-
-    <pq>5. 드라마 주 시청 방법 : </pq>
-    <a>{{answer.way}}</a> <br><br>
-
+      </main>
+    </div>
 </body>
 </html>
