--- a/Scripts/dramarama/templates/dramarama/result.html
+++ b/Scripts/dramarama/templates/dramarama/result.html
@@ -1,40 +1,51 @@
 {% load static %}
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>DRAMA라마</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
+    <meta name="generator" content="Hugo 0.79.0">
+    <title>DramaRama</title>
     <link rel="icon" href="{% static 'images/favicon.ico' %}" type="image/x-icon"/>
-    <!--<style>
-		@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300&display=swap');
-        p{ color: #aba2ff;
-           font-size: 100px;
-         }
-        button{ background-color: #aba2ff;
-                width: 200px;
-                height: 50px;
-                border-radius: 5px;
-                border: 0;
-                outline: 0ch;
-                }
-        button:hover{
-            background-color: #aba2ff;
-                width: 210px;
-                height: 60px;
-                border-radius: 5px;
-                border: 0;
-                outline: 0ch;
-        }
-    </style>-->
+    <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/cover/">
+    <!-- Bootstrap core JS -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
+    <!-- Bootstrap core CSS -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <!-- Custom styles for this template -->
+    <link href="{% static 'css/base.css' %}" rel="stylesheet">
 </head>
-<body>
-    <h3 id="dramaname">{{Drama.title}}</h3>
-    <h3 id="broadcast">{{Drama.channel}}</h3>
-    <iframe id="dramainfo" src="{{Drama.info_url}}" width="80%" height="500px"></iframe>
-    <form action="your-answer" method="post">
-        <button>나의대답</button>
-    </form>
-    <a href="{% url 'index' %}">
-        <button type="submit">홈</button>
-    </a>
-</body>
+<body class="d-flex text-center h-100 bg-app"> <!--user-select-none-->
+    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+      <main class="px-3">
+          <h5 class="mb-4 mt-2">🔽라마의 추천 결과🔽</h5>
+          <div class="section text-white">
+            <ul class="list-inline">
+                <h3 class="list-inline-item section-title">{{Drama.title}}</h3>
+                <h5 class="list-inline-item section-text">{{Drama.channel}}</h5>
+            </ul>
+          </div>
+          <iframe id="dramainfo" src="{{Drama.info_url}}" width="80%" height="500px"></iframe>
+            <p class="mt-3">마음에 들었으면 좋겠어요💜</p>
+          <ul class="list-inline">
+            <li class="list-inline-item mt-2">
+                <form action="your-answer" method="post">
+                    <button type="submit" class="btn btn-lg btn-secondary fw-bold border-white">나의 응답 보기</button>
+                </form>
+            </li>
+            <li class="list-inline-item">
+                <a href="{% url 'index' %}" class="btn btn-lg btn-secondary fw-bold border-white">홈으로</a>
+            </li>
+          </ul>
+
+      </main>
+
+      <footer class="out-container mt-auto text-center" style="text-shadow: none;">
+        <p>© 2021. DramaRama — <a href="https://github.com/mjkcool" target="_blank" class="text-white">mjkcool</a>
+      </footer>
+    </div>
+  </body>
+
 </html>
