survey.html > control form values with jquery

--- a/Scripts/dramarama/templates/dramarama/cover.html
+++ b/Scripts/dramarama/templates/dramarama/cover.html
@@ -20,9 +20,9 @@
 
   </head>
 
-  <body class="d-flex h-100 bg-app"> <!--user-select-none-->
+  <body class="d-flex h-100 bg-app user-select-none"> <!---->
 
-    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column" id="nav-tab">
+    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
       <header class="out-container mb-auto text-center pt-1 border-bottom">
         <div>
           <h2 class="title-app text-white float-md-start mb-0">DramaRama</h2>
@@ -51,7 +51,7 @@
                   <a href="{% url 'form' %}" class="btn btn-lg btn-secondary fw-bold border-white">나에게 맞는 드라마 찾으러 가기 →</a>
                 </p>
                 <p class="lead lead-button">
-                  <a href="{% url 'index' %}" class="btn btn-lg btn-secondary fw-bold border-white">내 드라마 취향 공유하기 →</a>
+                  <a href="{% url 'survey' %}" class="btn btn-lg btn-secondary fw-bold border-white">내 드라마 취향 공유하기 →</a>
                 </p>
               </div>
             </div>
