--- a/Scripts/dramarama/templates/dramarama/form.html
+++ b/Scripts/dramarama/templates/dramarama/form.html
@@ -20,7 +20,7 @@
 	<link rel="icon" href="{% static 'images/favicon.ico' %}" type="image/x-icon"/>
 
 </head>
-<body onload="noBack();" class="d-flex h-100 bg-app">
+<body class="d-flex h-100 bg-app">
 	<div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
 
 		<form name="testForm" action="To.you--From.Rama💜" method="post">
@@ -29,7 +29,6 @@
 					<h2 class="section-title text-white">너에 대해 알려줘!</h2>
 					<p class="section-text text-white">모든 항목에서 '현재'를 중심으로 응답해주십시오.</p>
 				</div>
-
 				<div class="row">
 					<div class="col-sm-6">
 						<div class="card my-2">
